Add Jan Steves Media Section

--- a/inaction/css/agency.css
+++ b/inaction/css/agency.css
@@ -64,6 +64,10 @@ h6 {
     background-color: #f7f7f7;
 }
 
+.bg-gallery {
+    background-color: #ffffff;
+}
+
 .bg-darkest-gray {
     background-color: #222;
 }
