--- a/inaction/less/agency.less
+++ b/inaction/less/agency.less
@@ -726,3 +726,6 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: @brand-primary;
 }
+.bg-gallery {
+    background-color: #f7f7f7;
+}
